--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@vue/cli-service-global": "^4.2.2",
     "bili": "^4.8.1",
     "node-sass": "^4.13.1",
+    "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-vue": "^5.1.6",
     "sass": "^1.25.0",
     "sass-loader": "^8.0.2",
